--- a/public/home.html
+++ b/public/home.html
@@ -20,5 +20,20 @@
 {{meow.text}}
 <a><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> </a>
 </h3>
+<h3>
+    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+Hello I flipped over a cup
+<a><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> </a>
+</h3>
+<h3>
+<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+My Owner just said Hi to me.Yum
+<a><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> </a>
+</h3>
+<h3>
+<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+I ran around the house today and made a mess
+<a><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> </a>
+</h3>
 </div>
 </div>
