Get Post command

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,19 @@ app.config(function($routeProvider, $locationProvider) {
 
 		app.controller('HomeController', function($scope,$http){
 
+			$scope.submitNewMeow=function(){
+				$http.post('/meows',{newMeow : $scope.newMeow}).then(function(){
+					getMeows();
+					$scope.newMeow='';
+				});
+			};
+
+			$scope.removeMeow=function(meow){
+				$http.put('/meows/remove',{ meow: meow}).then(function(){
+				getMeows();
+			});
+			};
+
 			function getMeows(){
 		$http.get('/meows').then(function(responce){
 				$scope.meows=responce.data;
@@ -33,6 +46,8 @@ app.config(function($routeProvider, $locationProvider) {
 getMeows();	
 
 		});
+
+	
 
 app.controller('SignupController', function($scope,$http){
 	
