--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	
 	<script type="text/javascript">
 		var app = angular.module('mittens',['ngRoute']);
-
+//hyhcfhy
 app.config(function($routeProvider, $locationProvider) {
 	$routeProvider
    .when('/', {
