--- a/public/home.html
+++ b/public/home.html
@@ -29,7 +29,7 @@ Hello I flipped over a cup
 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 My Owner just said Hi to me.Yum
 <a><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> </a>
-</h3>
+</h3>//gtfyugftufvgt
 <h3>
 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 I ran around the house today and made a mess
